--- a/src/index.css
+++ b/src/index.css
@@ -80,3 +80,16 @@
     cursor: pointer;
 
 }
+
+/* create new blog form */
+
+.create {
+    max-width: 400px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.create label{
+    text-align: left;
+    display: block;
+}
